Fix volume slider container being too wide

--- a/src/playback.scss
+++ b/src/playback.scss
@@ -161,7 +161,6 @@ body {
                     display: none;
                     background: rgba(0, 0, 0, 0.8);
                     bottom: 100%;
-                    width: 60px;
                     padding: 10px 20px;
 
                     cursor: default;
@@ -227,6 +226,8 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
+
+    cursor: default;
 
     .card {
         position: absolute;
